fixes #121